# ai-surrogate-models-in-engineering-on-aws

./: .buildinfo  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/datasets/: ahmed.doctree  drivaer.doctree  windsor.doctree
.doctrees/dev/: api.doctree  cli-toolkit.doctree  guide.doctree  learn.doctree
.doctrees/tutorials/: tutorial-kpi-windsor-data-access.doctree  tutorial-kpi-windsor-prediction.doctree  tutorial-kpi-windsor-training.doctree  tutorial-kpi-windsor.doctree  tutorial-slices-windsor-data-access.doctree  tutorial-slices-windsor-prediction.doctree  tutorial-slices-windsor-training.doctree  tutorial-slices-windsor.doctree  tutorial-surface-ahmed-data-access.doctree  tutorial-surface-ahmed-prediction.doctree  tutorial-surface-ahmed-training.doctree  tutorial-surface-ahmed.doctree
.doctrees/user/: install.doctree  mlflow-guide.doctree  notebook-guide.doctree  quickstart-kpi.doctree  quickstart-slices.doctree  quickstart-surface.doctree  (+4 more)
_sources/: index.rst.txt
_static/: alabaster.css  basic.css
datasets/: ahmed.html  drivaer.html  windsor.html
dev/: api.html  cli-toolkit.html  guide.html  learn.html
docs/: conf.py
scripts/: make_docs_zip  make_src_zip
tutorials/: tutorial-kpi-windsor-data-access.html  tutorial-kpi-windsor-prediction.html  tutorial-kpi-windsor-training.html  tutorial-kpi-windsor.html  tutorial-slices-windsor-data-access.html  tutorial-slices-windsor-prediction.html  tutorial-slices-windsor-training.html  tutorial-slices-windsor.html  tutorial-surface-ahmed-data-access.html  tutorial-surface-ahmed-prediction.html  tutorial-surface-ahmed-training.html  tutorial-surface-ahmed.html
user/: install.html  mlflow-guide.html  notebook-guide.html  quickstart-kpi.html  quickstart-slices.html  quickstart-surface.html  troubleshooting.html  user-guide-kpi.html  user-guide-slice.html  user-guide-surface.html
(+256 files in other folders)
